Fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* Page horizontal padding */
 .page-border {
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   max-width: 1300px;
   margin-left: auto;
   margin-right: auto;
